--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +11,7 @@
     <h1>Sunset & Sunrise Dashboard</h1>
     <div class="search-container">
       <input type="text" id="searchInput" placeholder="Enter Location">
-      <button onclick="searchLocation()">Search</button>
+      <button onclick="fetchSunriseSunsetInfo()">Search</button>
     </div>
     <div class="result-container">
       <h2>Location: <span id="locationName"></span></h2>
