--- a/index.html
+++ b/index.html
@@ -13,12 +13,30 @@
       <input type="text" id="searchInput" placeholder="Enter Location">
       <button onclick="fetchSunriseSunsetInfo()">Search</button>
     </div>
-    <div class="result-container">
-      <h2>Location: <span id="locationName"></span></h2>
-      <p>Sunrise Time: <span id="sunriseTime"></span></p>
-      <p>Sunset Time: <span id="sunsetTime"></span></p>
+    <!-- today add to all ids -->
+
+    <div class="result-container-today">
+      <h2>Location: <span id="locationNameToday"></span></h2>
+      <p>Sunrise Time: <span id="sunriseTimeToday"></span></p>
+      <p>Sunset Time: <span id="sunsetTimeToday"></span></p>
+      <p>Dawn Time: <span id="dawnTimeToday"></span></p>
+      <p>Dusk Time: <span id="duskTimeToday"></span></p>
+      <p>Day Length: <span id="dayLengthToday"></span></p>
+      <p>Solar Noon Time: <span id="solarNoonTimeToday"></span></p>
+      <p>Timezone: <span id="timezoneToday"></span></p>
     </div>
-  </div>
+<!-- tomorrow add to all ids -->
+    <div class="result-container-tomorrow">
+      <h2>Location: <span id="locationNameTomorrow"></span></h2>
+      <p>Sunrise Time: <span id="sunriseTimeTomorrow"></span></p>
+      <p>Sunset Time: <span id="sunsetTimeTomorrow"></span></p>
+      <p>Dawn Time: <span id="dawnTimeTomorrow"></span></p>
+      <p>Dusk Time: <span id="duskTimeTomorrow"></span></p>
+      <p>Day Length: <span id="dayLengthTomorrow"></span></p>
+      <p>Solar Noon Time: <span id="solarNoonTimeTomorrow"></span></p>
+      <p>Timezone: <span id="timezoneTomorrow"></span></p>
+    </div>
+
   <script src="script.js"></script>
 </body>
 </html>
