--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <button onclick="fetchSunriseSunsetInfo()">Search</button>
     </div>
     <!-- today add to all ids -->
-
+<div class="dataContainer">
     <div class="result-container-today">
       <h2>Today: <span id="locationNameToday"></span></h2>
       <p>Sunrise Time: <span id="sunriseTimeToday"></span></p>
@@ -36,7 +36,7 @@
       <p>Solar Noon Time: <span id="solarNoonTimeTomorrow"></span></p>
       <p>Timezone: <span id="timezoneTomorrow"></span></p>
     </div>
-
+</div>
   <script src="script.js"></script>
 </body>
 </html>
