--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <button onclick="fetchSunriseSunsetInfo()">Search</button>
     </div>
     <!-- today add to all ids -->
-<div class="dataContainer">
+
     <div class="result-container-today">
-      <h2>Today: <span id="locationNameToday"></span></h2>
+      <h2>Location: <span id="locationNameToday"></span></h2>
       <p>Sunrise Time: <span id="sunriseTimeToday"></span></p>
       <p>Sunset Time: <span id="sunsetTimeToday"></span></p>
       <p>Dawn Time: <span id="dawnTimeToday"></span></p>
@@ -27,7 +27,7 @@
     </div>
 <!-- tomorrow add to all ids -->
     <div class="result-container-tomorrow">
-      <h2>Tomorrow: <span id="locationNameTomorrow"></span></h2>
+      <h2>Location: <span id="locationNameTomorrow"></span></h2>
       <p>Sunrise Time: <span id="sunriseTimeTomorrow"></span></p>
       <p>Sunset Time: <span id="sunsetTimeTomorrow"></span></p>
       <p>Dawn Time: <span id="dawnTimeTomorrow"></span></p>
@@ -36,7 +36,7 @@
       <p>Solar Noon Time: <span id="solarNoonTimeTomorrow"></span></p>
       <p>Timezone: <span id="timezoneTomorrow"></span></p>
     </div>
-</div>
+
   <script src="script.js"></script>
 </body>
-</html> 
+</html>
